move&backgrColor done; fix ersponsiveness of #markupWrap

--- a/wp-content/themes/pixova-lite/layout/css/style.css
+++ b/wp-content/themes/pixova-lite/layout/css/style.css
@@ -517,6 +517,12 @@ section {
 #autoCode {
     background-color: #f0f0f0;
 }
+#markup {
+    background-color: #f0f0f0;
+}
+#tracks {
+    background-color: #f0f0f0;
+}
 #contact {
     background-color: #f0f0f0;
 }
